LayoutTests:

Reviewed by Darin and Eric.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=12150
        Corrected results for W3C's pservers-grad-16-b.
        Add a test for stop calues corner cases.

        * svg/W3C-SVG-1.1/pservers-grad-16-b-expected.checksum:
        * svg/W3C-SVG-1.1/pservers-grad-16-b-expected.png:
        * svg/W3C-SVG-1.1/pservers-grad-16-b-expected.txt:
        * svg/custom/gradient-stop-corner-cases-expected.checksum: Added.
        * svg/custom/gradient-stop-corner-cases-expected.png: Added.
        * svg/custom/gradient-stop-corner-cases-expected.txt: Added.
        * svg/custom/gradient-stop-corner-cases.svg: Added.

WebCore:

        Reviewed by Darin and Eric.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=12150
        Handle correctly cases where no stops are defined, cases where a
        stop offset value is less than previous stops offset value, and cases
        where a stop offset value is greater than 1.0.

        * platform/graphics/svg/SVGPaintServerGradient.cpp:
        (WebCore::SVGPaintServerGradient::setGradientStops): Don't sort stops
        * platform/graphics/svg/cg/SVGPaintServerGradientCg.cpp:
        (WebCore::cgGradientCallback): When there are no stops, use a transparent
        fill
        (WebCore::SVGPaintServerGradient::updateQuartzGradientStopsCache):
        a stop offset must always be considered at greater or equal to all
        preceding stop offsets, but no more than 1.0



Canonical link: https://commits.webkit.org/15700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18681 268f45cc-cd09-0410-ab3c-d52691b4dbfc